--- a/theme.css
+++ b/theme.css
@@ -40,6 +40,7 @@ body {
 }*/
 #board .board-container-wrapper {
   right: 0;
+  padding-right: 10px;
 }
 #board .board-container-wrapper,
 #discover .holder {
