--- a/theme.css
+++ b/theme.css
@@ -274,7 +274,7 @@ li,
   line-height: 1;
   position: relative;
   bottom: 16px;
-  margin-left: 80px;
+  margin-left: 90px; /*80px is better for portuguese, 90px for english. css knows no language*/
 }
 
 #detail .details-bottom div:not(.genre) {
