--- a/theme.css
+++ b/theme.css
@@ -7,11 +7,11 @@
   --he: 0.87;
   --me: 0.6;
   --le: 0.38;
-  
+
   --co: #8a5aab;
-  
+
   --cb: #301733;
-  
+
   --c9: #4b1c7a;
   --c8: #672588;
   --c7: #762a91;
@@ -22,7 +22,7 @@
   --c2: #ca95d0;
   --c1: #dfbfe2;
   --c0: #f2e5f3;
-  
+
   --00dp: #121212;
   --01dp: #1e1e1e;
   --02dp: #222222;
@@ -38,7 +38,7 @@
 
 /*i'm disabling the toasts because of that annoying error that appears every time you play something here, it's annoying*/
 #toast-container {
-  display: none
+  display: none;
 }
 
 html {
@@ -54,7 +54,8 @@ body,
 h2,
 #detail .holder .actionButtons .button-b .icon,
 #detail .details .title,
-#detail .details-movie .title {
+#detail .details-movie .title,
+.items .notification a {
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Helvetica Neue', sans-serif !important;
 }
 
@@ -98,6 +99,7 @@ body {
   font-weight: bold;
   font-size: 18px;
   opacity: var(--he);
+  margin-bottom: 7px;
 }
 
 #board .board-notif li .thumb,
@@ -125,7 +127,7 @@ body {
 #calendar li,
 #calendar #future-episodes .episode,
 .sidebar .episodes-list li:not(.ads) {
-  transition: 0.1s
+  transition: 0.1s;
 }
 
 #library .lib-type li:focus,
@@ -149,11 +151,11 @@ body {
   top: 0;
   left: 0;
   border-radius: var(--br);
-  
+
   transition: 0.1s;
   /*stremio's browser doesn't supports curved outlines :(
   /*outline: 2px solid #fff0;*/
-  box-shadow: 0 0 3px 1px #000a;  
+  box-shadow: 0 0 3px 1px #000a;
 }
 
 #board .notif:hover .thumb:after,
@@ -197,7 +199,7 @@ body {
 }
 @media (min-width: 1400px) {
   #board .recent-board li {
-      width: 11.5% !important;
+    width: 11.5% !important;
   }
 }
 
@@ -219,10 +221,10 @@ body {
   background-color: var(--c2);
 }
 
-.info-box .controls a .icon, #series-calendar ul.month li.day.today .date {
+.info-box .controls a .icon,
+#series-calendar ul.month li.day.today .date {
   background-color: var(--c3);
 }
-
 
 #series-calendar ul.month li.day {
   background-color: var(--01dp);
@@ -237,8 +239,9 @@ body {
   background-color: var(--24dp);
 }
 
-#series-calendar ul.month li.day .date, #series-calendar ul.days li.label {
-  color: var(--c2)
+#series-calendar ul.month li.day .date,
+#series-calendar ul.days li.label {
+  color: var(--c2);
 }
 
 #board .board-item .info {
@@ -266,7 +269,8 @@ body {
 .sidebar .season-chooser li,
 li,
 #detail .addons-catalogue-link a,
-.button-b, .button-s {
+.button-b,
+.button-s {
   border-radius: var(--br);
 }
 
@@ -276,16 +280,17 @@ li,
 }
 
 .sidebar .episodes-list li {
-  opacity: var(--he)
+  opacity: var(--he);
 }
 
-.sidebar .episodes-list li.playing, .sidebar .season-chooser ul li.selected {
+.sidebar .episodes-list li.playing,
+.sidebar .season-chooser ul li.selected {
   background-color: var(--c4);
-  opacity: var(--he)
+  opacity: var(--he);
 }
 
 .sidebar .episodes-list li.unavailable {
-  opacity: var(--le)
+  opacity: var(--le);
 }
 
 .sidebar .episodes-list li:not(.ads):hover {
@@ -293,7 +298,7 @@ li,
 }
 
 .sidebar .episodes-list li.watched:after {
-  background-image: url("/theme_img/watched.png")
+  background-image: url('/theme_img/watched.png');
 }
 
 #detail .cover,
@@ -307,7 +312,8 @@ li,
   top: 0;
 }
 
-.streams-holder, .streams-play {
+.streams-holder,
+.streams-play {
   height: 86px;
 }
 
@@ -392,7 +398,8 @@ li,
   opacity: var(--me);
 }
 
-.details-more, .details-summary .title {
+.details-more,
+.details-summary .title {
   display: none;
 }
 
@@ -443,7 +450,7 @@ li,
   background-color: #0000;
 }
 
-#addonsCatalog .filter .type+.type {
+#addonsCatalog .filter .type + .type {
   overflow-x: hidden;
 }
 
@@ -635,7 +642,6 @@ body #search-bar:hover button,
 #library .sort-filter li:hover,
 #addonsCatalog .filter .type li:hover,
 .settings-container .sections a:hover,
-
 body #header .tab .icon:focus,
 #window-controls:not(.player) li .icon:focus,
 body #search-bar:focus button,
@@ -687,11 +693,17 @@ body .player-handle .tab .icon {
 }
 
 .items .notification {
-  background: white;
-  color: black;
+  background: rgba(202, 149, 208, 0.8);
+  color: white;
   border-radius: 0 0 var(--br) var(--br);
 }
 
+.items .notification.bottom {
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
 .items .notification .ng-scope.ng-binding {
-  color: black;
+  font-weight: bold;
 }
